fix spacing

--- a/src/pages/country/country.module.css
+++ b/src/pages/country/country.module.css
@@ -107,18 +107,20 @@
     
     .stats_container {
         display: flex;
-        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        /* justify-content: center; */
         margin-bottom: -1rem;
         padding-left: 0.1rem;
         padding-right: 0.2rem;
     }
     
     .stats {
-        font-size: 0.85rem; 
+        font-size: 1rem; 
         margin: 0 0.7rem 1rem 0;
     }
     
     .stats_daily {
-        font-size: 0.85rem;
+        font-size: 1rem;
     }
 }
